[project]
name = "luna-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "black>=26.3.1",
    "fastapi>=0.136.0",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.45.0",
]
