[project]
name = "luna-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "black>=26.3.1",
    "fastapi>=0.136.0",
    "faststream[rabbit,cli]>=0.5.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.45.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
